--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     				<div class="entete">
     					<span class="status green"></span>
     					<h2></h2>
-    					<h3>10:12AM, Today</h3>
+    					<h3>10:12, Yesterday</h3>
     				</div>
     				<div class="triangle"></div>
     				<div class="message">
@@ -111,7 +111,7 @@
     			</li>
     			<li class="me">
     				<div class="entete">
-    					<h3>10:12AM, Today</h3>
+    					<h3>10:12, Yesterday</h3>
     					<h2>me</h2>
     					<span class="status blue"></span>
     				</div>
@@ -122,7 +122,7 @@
     			</li>
     			<li class="me">
     				<div class="entete">
-    					<h3>10:12AM, Today</h3>
+    					<h3>10:12, Today</h3>
     					<h2>me</h2>
     					<span class="status blue"></span>
     				</div>
